# votigo

./: .dockerignore  .gitignore  Dockerfile  README.md  codegen.sh  extract-openapi.py  jwks-cache.sqlite  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  image-cleanup.yml
auth/: jwks.py  middleware.py  models.py
client/: .env.example  .gitignore  Dockerfile  package.json  tailwind.config.ts
client/src/lib/: index.ts
client/src/lib/components/: AuthContext.svelte  UserMenu.svelte  UserMenuButton.svelte
client/src/lib/filter/: add-condition-modal.svelte  condition.svelte  fields.ts
client/src/routes/: +layout.svelte  +page.svelte  +page.ts
client/src/routes/auth/callback/: +page.svelte
client/src/routes/filter/[filter_id]/: +page.svelte  +page.ts
client/src/routes/vote/[vote_id]/: +page.svelte  +page.ts
client/src/routes/vote/[vote_id]/edit/: +page.svelte  +page.ts
client/src/routes/vote/[vote_id]/results/: +page.ts
client/tests/: home_test.ts  test.ts
deploy/: docker-compose.yml  example.env
filter/: aggregate.py  data_models.py  test_aggregate.py  test_data_models.py  transcoding.py
option/: aggregate.py  test_aggregate.py
vote/: aggregate.py  test_aggregate.py
votigo/: application.py  data_models.py  test_application.py
