[tool.poetry]
name = "votigo"
version = "0.1.0"
description = "Learning practical event source with a real-world project"
authors = ["Leo Kuboschek <leo@kuboschek.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
eventsourcing = {extras = ["crypto"], version = "^9.2.22"}
uvicorn = "^0.30.1"
requests = "^2.32.3"
pyjwt = "^2.8.0"
requests-cache = "^1.2.1"
pydantic = "^2.7.4"
fastapi-third-party-auth = "^0.1.2"
jsonpointer = "^3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
types-requests = "^2.32.0.20240622"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.20240311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
