[tool.poetry]
name = "votigo"
version = "0.1.0"
description = "Learning practical event source with a real-world project"
authors = ["Leo Kuboschek <leo@kuboschek.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
eventsourcing = {extras = ["crypto"], version = "^9.3.2"}
uvicorn = "^0.30.6"
requests = "^2.32.3"
pyjwt = "^2.9.0"
requests-cache = "^1.2.1"
pydantic = "^2.8.2"
fastapi-third-party-auth = "^0.1.2"
jsonpointer = "^3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
types-requests = "^2.32.0.20240712"
pyyaml = "^6.0.2"
types-pyyaml = "^6.0.12.20240808"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
